tests/paczka1/fuzzy1/82982406.err
Error in line 9: WNMS A399 52,5
Error in line 11: A399 A399 40,0
Error in line 14: A399 S546 31,4
Error in line 19: A399 A990 63,6
Error in line 10: AQFzfubk A399 42,4
Error in line 12: 3ncPcTDr3z A990 48,9
Error in line 30: A399 A392 51,0
